--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -1802,7 +1802,7 @@
 		Italian:"Ti porgiamo le nostre scuse."
 		French:"Désolé."
 		Simplified_Chinese:"请您原谅我的鲁莽。"
-		Russian:"Простите"
+		Russian:"Простите."
 	}
 
 	"Never!":{
