--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -185,6 +185,10 @@
 		Russian:"Мы обнаружили город-государство [name]!"
 	}
 	
+	"We have encountered [civName]!":{
+		Simplified_Chinese:"我们遇到了文明--[civName]！"
+	}
+
 	// Friendship declaration flavor texts
 	"Declare Friendship ([numberOfTurns] turns)":{
 		Italian:"Dichiarazione di Amicizia ([numberOfTurns] turni)"
@@ -752,6 +756,7 @@
 
 	"Introduction to [nation]":{
 		Italian:"Introduci a [nation]"
+		Simplified_Chinese:"介绍认识[nation]"
 	}
 
 	"Luxury resources":{
