--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -548,5 +548,9 @@
 		French:"L'un de nos accord commercial avec [nation] s'est arrêté"
 		Russian:"Торговая сделка с [nation] была завершена досрочно"
 	},
+
+ 	"[nation] agreed to stop settling cities near us!": {
+		Italian:"[nation] ha promesso di smettere di fondare città vicino a noi!"
+	},
 	
 }
